@@ -1,3 +1,7 @@
+2007-01-10        svu
+
+	* sql/SqlTextPublisher.java: Aggregating update counter.
+
 2006-12-14        svu
 
 	* sql/TableObjectType.java, sql/SqlSubVFS.java: The "Schema" object
